[package]
name = "wildcard_ex"
version = "0.1.2"
edition = "2021"
authors = ["kujirahand <web@kujirahand.com>"]
description = "This is a library for extended wildcards that allows VB-like specifications."
readme = "README.md"
repository = "https://github.com/kujirahand/wildcard_ex-rust"
license-file = "LICENSE"
keywords = ["wildcard", "pattern"]
documentation = "https://docs.rs/wildcard_ex"

[dependencies]
